# gentro-os

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
gentro-ui/: .env.example  .gitignore  AGENTS.md  Taskfile.yml  go.mod  go.sum  main.go  package-lock.json
gentro-ui/frontend/: package-lock.json  package.json
gentro-ui/frontend/src/lib/components/: GameCard.svelte
gentro-ui/frontend/src/lib/stores/: games.svelte.ts  launch.svelte.ts
gentro-ui/frontend/src/routes/: +layout.svelte  +page.svelte
gentro-ui/frontend/static/: style.css
gentro-ui/services/config/: config.go  config_test.go
gentro-ui/services/games/: games.go  games_filter_test.go  source.go
gentro-ui/services/games/apppaths/: apppaths.go
gentro-ui/services/games/art/: composer.go
gentro-ui/services/games/database/: database.go
gentro-ui/services/games/emulator/: defaults.go  service.go
gentro-ui/services/games/events/: events.go
gentro-ui/services/games/metadata/: fetcher.go
gentro-ui/services/games/metadata/igdb/: client.go  resolver.go
gentro-ui/services/games/models/: models.go
gentro-ui/services/games/sources/emulated/: emulated.go
launcher-core/: .dockerignore  Cargo.toml  Dockerfile  README.md
launcher-core/src/: main.rs
launcher-ui/: README.md  package-lock.json  package.json
launcher-ui/src-tauri/: tauri.conf.json
launcher-ui/src/routes/: +page.svelte
plan/: architecture.md  dev-environment.md  dolphin-capability-matrix.md  flatpak-pipeline.md  ipc-api.md  overview.md  roadmap.md  todo-next.md
scripts/: dev-core
(+8 files in other folders)
